<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".InstructScreen" >

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/instruct_message" />

    <ImageView
        android:id="@+id/gametel_buttons"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/button_gametel_description"
        android:src="@drawable/gametel_buttons_new" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/play_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_button" />
    </LinearLayout>

</LinearLayout>